--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import dependancies\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -34,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in the datasets\n",
     "train_df = pd.read_csv(Path('Resources/2019loans.csv'))\n",
     "test_df = pd.read_csv(Path('Resources/2020Q1loans.csv'))"
    ]
